# anbox-platform-sdk

./: README.md  SECURITY.md
.github/: renovate.json
.github/workflows/: release.yaml
docs/html/: anbox__proxy_8h.html  anbox__proxy_8h.js  anbox__proxy_8h__dep__incl.map  anbox__proxy_8h__dep__incl.md5  anbox__proxy_8h__incl.map  anbox__proxy_8h__incl.md5  anbox__proxy_8h_source.html  anbox_sdk_api_overview_page.html  anbox_sdk_example_audio_streaming.html  anbox_sdk_example_minimal.html  anbox_sdk_examples.html  anbox_sdk_examples.js  anbox_sdk_plugin_package_and_deploy.html  annotated.html  annotated_dup.js  api__overview_8dox.html  audio__format_8h.html  audio__format_8h.js  audio__format_8h__dep__incl.map  audio__format_8h__dep__incl.md5  audio__format_8h__incl.map  audio__format_8h__incl.md5  audio__format_8h_source.html  audio__processor_8h.html  audio__processor_8h.js  audio__processor_8h__dep__incl.map  audio__processor_8h__dep__incl.md5  audio__processor_8h__incl.map  audio__processor_8h__incl.md5  audio__processor_8h_source.html  audio__streaming__example_8dox.html  camera__processor_8h.html  camera__processor_8h.js  camera__processor_8h__dep__incl.map  camera__processor_8h__dep__incl.md5  camera__processor_8h__incl.map  camera__processor_8h__incl.md5  camera__processor_8h_source.html  classanbox_1_1AnboxProxy-members.html  classanbox_1_1AnboxProxy.html  (+477 more)
examples/: CMakeLists.txt
examples/audio_streaming/: CMakeLists.txt  audio_streaming_platform.cpp
examples/camera/: CMakeLists.txt  camera_platform.cpp
examples/direct_rendering/: CMakeLists.txt  direct_rendering_platform.cpp
examples/gps/: CMakeLists.txt  gps_platform.cpp
examples/minimal/: CMakeLists.txt  minimal_platform.cpp
examples/nvidia/: CMakeLists.txt  nvidia_platform.cpp
examples/sensor/: CMakeLists.txt  sensor_platform.cpp
include/anbox-platform-sdk/: anbox_proxy.h  audio_format.h  audio_processor.h  camera_processor.h  common.h  gps_processor.h  graphics_processor.h  input_processor.h  platform.h  plugin.h  public_api.h  sensor_processor.h  types.h  version.h  vhal_connector.h  video_decoder.h
include/anbox-platform-sdk/experimental/: vhal_connector.h
lib/anbox-platform-sdk/: anbox-platform-sdk-config.cmake
lib/anbox-platform-sdk/module/: anbox-platform-sdk.cmake
src/: CMakeLists.txt  public_api.cpp  registry.cpp
tool/: CMakeLists.txt  main.cpp
